# Streamlit_DE25_Rikard_Oledal-

./: README.md  requierments.txt  requirements.txt
.devcontainer/: devcontainer.json
salaries/: pyproject.toml
salaries/src/salaries/: app.py
salaries/src/salaries/assets/style/: dashboard.css
salaries/src/salaries/components/: charts.py  kpis.py
salaries/src/salaries/pages/: dashboard.py  home.py  raw_data.py
salaries/src/salaries/utils/: constants.py  helpers.py
