[project]
name = "salaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RIKARD OLEDAL", email = "rikardoledal@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "streamlit>=1.56.0",
]

[project.scripts]
salaries = "salaries:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"